<resources>
    <string name="app_name">Mega App</string>
    <string name="hello_islam">Hello islam!</string>
    <string name="login">Login</string>
    <string name="mega_logo">Mega Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="register_now">Register Now !!</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account_sign_in">Already have account ? Sign In</string>
    <string name="please_enter_your_recovery_mail">Please enter your recovery mail</string>
    <string name="once_you_wrote_your_recovery_mail_and_clicked_on_send_verficiation_link_button_you_will_receive_an_email_to_reset_your_password">Once you wrote your recovery mail and clicked on send verficiation link button , you will receive an email to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_to_mega_app">Welcome to MEGA APP</string>
    <string name="calculator_app">Calculator APP</string>
    <string name="enter_first_number">Enter Number</string>
    <string name="enter_second_number">Enter second Number</string>
    <string name="plus">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result_is">Result is :</string>
    <string name="calculate">Calculate</string>
    <string name="reset_values">Reset values</string>
    <string name="random_highest_mountains_app">Random Highest Mountains APP</string>
    <string name="welcome_to_random_highest_mountains_app_you_can_click_to_generate_random_names_of_mountains">Welcome to Random Highest Mountains App, you can click to generate random names of mountains.</string>
    <string name="here_random_mountains_will_appear">HERE RANDOM MOUNTAINS WILL APPEAR</string>
    <string name="generate_random_name">Generate Random Name</string>
    <string name="restaurant_ordering">Restaurant Ordering</string>
    <string name="mega_restaurant_menu">Mega Restaurant Menu</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="burger">Burger</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="vegetables">Vegetables</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="pepsi">Pepsi</string>
    <string name="anise">Anise</string>
    <string name="your_order_is">Your Order is :</string>
    <string name="ask_for_invoice">Ask for invoice</string>
    <string name="and_your_invoice_is">Your order is : And your invoice is :</string>
    <string name="_30">30$</string>
    <string name="_20">20$</string>
    <string name="_35">35$</string>
    <string name="_5">5$</string>
    <string name="_3">3$</string>
    <string name="_12">12$</string>
    <string name="_3_5">3.5$</string>
    <string name="dog_or_cat_quiz">Dog Or Cat Quiz</string>
    <string name="welcome_to_dog_or_cat_quiz">Welcome to Dog Or Cat Quiz</string>
    <string name="when_talking_to_someone_do_you_maintain_eye_contact">-When talking to someone do you maintain eye contact?</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="some_times">Some Times</string>
    <string name="how_often_do_you_hug_people">How often do you hug people?</string>
    <string name="all_the_time">All the time</string>
    <string name="not_physical_person">Not Physical Person</string>
    <string name="occasionally">Occasionally</string>
    <string name="how_many_times_you_love_someone">How many times you love someone?</string>
    <string name="daily">Daily</string>
    <string name="from_time_to_time">From Time to Time</string>
    <string name="weekly">Weekly</string>
    <string name="get_result">Get Result</string>
    <string name="you_are_a">You are a !!!</string>
    <string name="dogorcatquizimage">DogOrCatQuizImage</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="welcome_to_our_temperature_converter_app">Welcome to our Temperature Converter App</string>
    <string name="temperature_converter_image">Temperature Converter Image</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="convert">Convert</string>
    <string name="yat_group">Yat Group</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="person_position">Person Position</string>
    <string name="passing_bio_data">Passing Bio Data</string>
    <string name="cr7">CR7</string>
    <string name="trika">Trika</string>
    <string name="text">text</string>
    <string name="music_player">Music Player</string>
    <string name="pause_image">Pause Image</string>
    <string name="play_image">Play Image</string>
    <string name="stop_image">Stop Image</string>
    <string name="video_player">Video Player</string>
    <string name="getcurrentlocation">Get Current Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="javatpoint_website">JavaTpoint Website</string>
    <string name="mobile_track_pdf">Mobile Track PDF</string>
</resources>