<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".Home">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/logo"
            android:contentDescription="@string/mega_logo" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CalculatorApp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/calculator_app"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_randomHighestMountains"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/random_highest_mountains_app"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Restaurant"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/restaurant_ordering"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_DogOrCat"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/dog_or_cat_quiz"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_temperatureConverter"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/temperature_converter"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_YatGroup"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/yat_group"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPassingBioData"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:padding="@dimen/_5sdp"
            android:text="@string/passing_bio_data"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMusicPlayer"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/music_player"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVideoExoPlayer"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/video_player"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogleMaps"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/getcurrentlocation"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnJavaTpointWebsite"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/javatpoint_website"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPDFView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/mobile_track_pdf"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
